--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-jsonschema-form",
   "version": "0.2.0",
-  "description": "A simple React component capable of building forms from a JSON schema.",
+  "description": "A simple React component capable of building HTML forms out of a JSON schema.",
   "scripts": {
     "dist": "babel -d lib/ src/ && rimraf dist && webpack --config webpack.config.dist.js --optimize-minimize",
     "lint": "eslint src test",
