Fixed defaults initial propagation.

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-plugin-react": "^3.6.3",
     "express": "^4.13.3",
     "gh-pages": "^0.4.0",
+    "html": "0.0.10",
     "jsdom": "^7.2.1",
     "mocha": "^2.3.0",
     "react-addons-test-utils": "^0.14.3",
