--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.4.1",
   "description": "A simple React component capable of building HTML forms out of a JSON schema.",
   "scripts": {
+    "build:css": "cp css/react-jsonschema-form.css dist/",
     "build:lib": "rimraf lib && babel -d lib/ src/",
     "build:dist": "rimraf dist && webpack --config webpack.config.dist.js --optimize-minimize",
-    "dist": "npm run build:lib && npm run build:dist",
+    "dist": "npm run build:lib && npm run build:dist && npm run build:css",
     "lint": "eslint src test",
     "publish-to-npm": "npm run dist && npm publish",
     "start": "node devServer.js",
