Replaced cosmos with demo live server.

--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "build:css": "cp css/react-jsonschema-form.css dist/",
     "build:lib": "rimraf lib && babel -d lib/ src/",
     "build:dist": "rimraf dist && webpack --config webpack.config.dist.js --optimize-minimize",
+    "build:playground": "rimraf build && webpack --config webpack.config.prod.js --optimize-minimize && cp playground/index.prod.html build/index.html",
     "dist": "npm run build:lib && npm run build:dist && npm run build:css",
     "lint": "eslint src test",
+    "publish-to-gh-pages": "npm run build:playground && gh-pages --dist build/",
     "publish-to-npm": "npm run dist && npm publish",
     "start": "node devServer.js",
     "tdd": "npm run test -- -w",
@@ -31,20 +33,24 @@
     "babel-loader": "^5.3.2",
     "babel-plugin-react-transform": "^1.1.1",
     "chai": "^3.3.0",
-    "cosmos-js": "^0.7.1",
+    "codemirror": "^5.10.0",
+    "css-loader": "^0.23.1",
     "eslint": "^1.8.0",
     "eslint-plugin-react": "^3.6.3",
     "express": "^4.13.3",
+    "extract-text-webpack-plugin": "^0.9.1",
     "gh-pages": "^0.4.0",
     "html": "0.0.10",
     "jsdom": "^7.2.1",
     "mocha": "^2.3.0",
     "react-addons-test-utils": "^0.14.3",
+    "react-codemirror": "^0.2.2",
     "react-transform-catch-errors": "^1.0.0",
     "react-transform-hmr": "^1.0.1",
     "redbox-react": "^1.2.0",
     "rimraf": "^2.4.4",
     "sinon": "^1.17.2",
+    "style-loader": "^0.13.0",
     "webpack": "^1.10.5",
     "webpack-dev-middleware": "^1.4.0",
     "webpack-hot-middleware": "^2.6.0"
