--- a/test/.eslintrc
+++ b/test/.eslintrc
@@ -1,5 +1,16 @@
 {
   "env": {
-    "mocha": true
+    "mocha": true,
+  },
+  "globals": {
+    d: true
+  },
+  "rules": {
+    "no-unused-vars": [
+      2,
+      {
+        "varsIgnorePattern": "^d$"
+      }
+    ]
   }
 }
