--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "chai": "^3.3.0",
     "codemirror": "^5.10.0",
     "css-loader": "^0.23.1",
+    "deeper": "^2.1.0",
     "eslint": "^1.8.0",
     "eslint-plugin-react": "^3.6.3",
     "express": "^4.13.3",
