--- a/package.json
+++ b/package.json
@@ -42,8 +42,10 @@
     "chai": "^3.3.0",
     "codemirror": "^5.10.0",
     "css-loader": "^0.23.1",
-    "eslint": "^1.8.0",
-    "eslint-plugin-react": "^3.6.3",
+    "eslint": "^2.4.0",
+    "eslint-plugin-react": "^4.2.3",
+    "estraverse": "^4.2.0",
+    "estraverse-fb": "^1.3.1",
     "express": "^4.13.3",
     "extract-text-webpack-plugin": "^0.9.1",
     "gh-pages": "^0.11.0",
