--- a/package.json
+++ b/package.json
@@ -6,15 +6,15 @@
     "build:readme": "toctoc README.md -w",
     "build:css": "cp css/react-jsonschema-form.css dist/",
     "build:lib": "rimraf lib && babel -d lib/ src/",
-    "build:dist": "rimraf dist && webpack --config webpack.config.dist.js --optimize-minimize",
-    "build:playground": "rimraf build && webpack --config webpack.config.prod.js --optimize-minimize && cp playground/index.prod.html build/index.html",
+    "build:dist": "rimraf dist && NODE_ENV=production webpack --config webpack.config.dist.js --optimize-minimize",
+    "build:playground": "rimraf build && NODE_ENV=production webpack --config webpack.config.prod.js --optimize-minimize && cp playground/index.prod.html build/index.html",
     "dist": "npm run build:lib && npm run build:dist && npm run build:css",
     "lint": "eslint src test",
     "publish-to-gh-pages": "npm run build:playground && gh-pages --dist build/",
     "publish-to-npm": "npm run build:readme && npm run dist && npm publish",
     "start": "node devServer.js",
-    "tdd": "npm run test -- -w",
-    "test": "NODE_ENV=test mocha --compilers js:babel/register --recursive --require ./test/setup-jsdom.js $(find test -name '*_test.js')"
+    "tdd": "NODE_ENV=test babel-node node_modules/.bin/_mocha --watch --require ./test/setup-jsdom.js 'test/**/*_test.js'",
+    "test": "NODE_ENV=test babel-node node_modules/.bin/_mocha --require ./test/setup-jsdom.js 'test/**/*_test.js'"
   },
   "main": "lib/index.js",
   "files": [
@@ -35,10 +35,15 @@
     "jsonschema": "^1.0.2"
   },
   "devDependencies": {
-    "babel": "^5.8.20",
-    "babel-eslint": "^4.1.6",
-    "babel-loader": "^5.3.2",
-    "babel-plugin-react-transform": "^1.1.1",
+    "babel-cli": "^6.6.5",
+    "babel-core": "^6.7.4",
+    "babel-eslint": "^5.0.0",
+    "babel-loader": "^6.2.4",
+    "babel-plugin-react-transform": "^2.0.2",
+    "babel-plugin-transform-class-properties": "^6.6.0",
+    "babel-plugin-transform-object-rest-spread": "^6.6.5",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
     "chai": "^3.3.0",
     "codemirror": "^5.13.2",
     "css-loader": "^0.23.1",
@@ -50,8 +55,10 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "gh-pages": "^0.11.0",
     "html": "0.0.10",
+    "install": "^0.6.1",
     "jsdom": "^8.1.0",
     "mocha": "^2.3.0",
+    "npm": "^3.8.2",
     "react-addons-test-utils": "^0.14.3",
     "react-codemirror": "^0.2.3",
     "react-transform-catch-errors": "^1.0.0",
