Fixed #93: Build lib files using the production env.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build:readme": "toctoc README.md -w",
     "build:css": "cp css/react-jsonschema-form.css dist/",
-    "build:lib": "rimraf lib && babel -d lib/ src/",
+    "build:lib": "rimraf lib && NODE_ENV=production babel -d lib/ src/",
     "build:dist": "rimraf dist && NODE_ENV=production webpack --config webpack.config.dist.js --optimize-minimize",
     "build:playground": "rimraf build && NODE_ENV=production webpack --config webpack.config.prod.js --optimize-minimize && cp playground/index.prod.html build/index.html",
     "dist": "npm run build:lib && npm run build:dist && npm run build:css",
