Fixes #140: Schema definition ref should override local schema type.

--- a/.eslintrc
+++ b/.eslintrc
@@ -6,7 +6,7 @@
         "react/react-in-jsx-scope": 2,
 
         "curly": [2],
-        "indent": [2, 2, {SwitchCase: 1}],
+        "indent": [2, 2, {"SwitchCase": 1}],
         "quotes": [1, "double"],
         "linebreak-style": [2, "unix"],
         "semi": [2, "always"],
