--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "gh-pages": "^0.11.0",
     "grunt": "^0.4.5",
     "grunt-cli": "^0.1.13",
-    "grunt-contrib-copy": "^1.0.0"
+    "grunt-contrib-copy": "^1.0.0",
     "html": "0.0.10",
     "jsdom": "^8.3.0",
     "mocha": "^2.3.0",
