--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "publish-to-gh-pages": "npm run build:playground && gh-pages --dist build/",
     "publish-to-npm": "npm run build:readme && npm run dist && npm publish",
     "start": "node devServer.js",
-    "tdd": "NODE_ENV=test babel-node node_modules/.bin/_mocha --watch --require ./test/setup-jsdom.js 'test/**/*_test.js'",
-    "test": "NODE_ENV=test babel-node node_modules/.bin/_mocha --require ./test/setup-jsdom.js 'test/**/*_test.js'"
+    "tdd": "NODE_ENV=test babel-node node_modules/.bin/_mocha --require co-mocha --watch --require ./test/setup-jsdom.js 'test/**/*_test.js'",
+    "test": "NODE_ENV=test babel-node node_modules/.bin/_mocha --require co-mocha --require ./test/setup-jsdom.js 'test/**/*_test.js'"
   },
   "main": "lib/index.js",
   "files": [
@@ -43,6 +43,7 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "chai": "^3.3.0",
+    "co-mocha": "^1.1.2",
     "codemirror": "^5.13.2",
     "css-loader": "^0.23.1",
     "eslint": "^2.9.0",
