Support loading a file field with data urls.

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "setimmediate": "^1.0.4"
   },
   "devDependencies": {
+    "atob": "^2.0.3",
     "babel-cli": "^6.6.5",
     "babel-core": "^6.7.4",
     "babel-eslint": "^6.0.2",
