--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "node": ">=6"
   },
   "peerDependencies": {
-    "react": "^0.14.0 || ^15.0.0"
+    "react": "^15.0.0"
   },
   "dependencies": {
     "deeper": "^2.1.0",
