--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "jsonschema": "^1.0.2",
+    "lodash.topath": "^4.5.2",
     "setimmediate": "^1.0.5"
   },
   "devDependencies": {
@@ -49,7 +50,6 @@
     "chai": "^3.3.0",
     "cross-env": "^2.0.1",
     "css-loader": "^0.23.1",
-    "eslint": "^2.9.0",
     "eslint-plugin-react": "^4.2.3",
     "estraverse": "^4.2.0",
     "estraverse-fb": "^1.3.1",
