--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "build:lib": "rimraf lib && cross-env NODE_ENV=production babel -d lib/ src/",
     "build:dist": "rimraf dist && cross-env NODE_ENV=production webpack --config webpack.config.dist.js --optimize-minimize",
     "build:playground": "rimraf build && cross-env NODE_ENV=production webpack --config webpack.config.prod.js --optimize-minimize && cp playground/index.prod.html build/index.html",
+    "cs-check": "prettier-check --jsx-bracket-same-line '{playground,src,test}/**/*.js'",
+    "cs-format": "prettier --jsx-bracket-same-line '{playground,src,test}/**/*.js' --write",
     "dist": "npm run build:lib && npm run build:dist",
     "lint": "eslint src test playground",
     "publish-to-gh-pages": "npm run build:playground && gh-pages --dist build/",
@@ -45,11 +47,11 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "babel-register": "^6.18.0",
-    "codemirror": "^5.20.2",
-    "eslint": "^3.15.0",
     "chai": "^3.3.0",
+    "codemirror": "^5.20.2",
     "cross-env": "^2.0.1",
     "css-loader": "^0.23.1",
+    "eslint": "^3.15.0",
     "eslint-plugin-react": "^4.2.3",
     "estraverse": "^4.2.0",
     "estraverse-fb": "^1.3.1",
@@ -59,6 +61,8 @@
     "html": "0.0.10",
     "jsdom": "^8.3.0",
     "mocha": "^2.5.3",
+    "prettier": "^0.22.0",
+    "prettier-check": "^1.0.0",
     "react": "^15.0.0",
     "react-addons-test-utils": "^15.3.2",
     "react-codemirror": "^0.2.3",
