add  package and add respective imports b/c it was deprecated

--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "mocha": "^2.5.3",
     "prettier": "^1.0.0",
     "prettier-check": "^1.0.0",
+    "prop-types": "^15.5.8",
     "react": "^15.0.0",
     "react-addons-test-utils": "^15.3.2",
     "react-codemirror": "^0.2.3",
