--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "react": "^15.0.0"
   },
   "dependencies": {
-    "jsonschema": "^1.2.0",
+    "ajv": "^5.2.3",
     "lodash.topath": "^4.5.2",
     "prop-types": "^15.5.8",
     "setimmediate": "^1.0.5"
@@ -71,6 +71,7 @@
     "html": "0.0.10",
     "husky": "^0.13.2",
     "jsdom": "^8.3.0",
+    "json-loader": "^0.5.7",
     "lint-staged": "^3.3.1",
     "mocha": "^2.5.3",
     "prettier": "^1.7.2",
