--- a/package.json
+++ b/package.json
@@ -62,6 +62,8 @@
     "cross-env": "^2.0.1",
     "css-loader": "^0.23.1",
     "eslint": "^3.15.0",
+    "eslint-config-react-app": "^2.0.1",
+    "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-react": "^4.2.3",
     "estraverse": "^4.2.0",
     "estraverse-fb": "^1.3.1",
