--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "babel-preset-react": "^6.16.0",
     "babel-register": "^6.18.0",
     "chai": "^3.3.0",
-    "codemirror": "^5.20.2",
+    "codemirror": "^5.30.0",
     "cross-env": "^2.0.1",
     "css-loader": "^0.23.1",
     "eslint": "^4.9.0",
@@ -81,7 +81,7 @@
     "prettier": "^1.7.2",
     "react": "^15.5.0",
     "react-addons-test-utils": "^15.3.2",
-    "react-codemirror": "^0.2.3",
+    "react-codemirror2": "^2.0.2",
     "react-dom": "^15.3.2",
     "react-transform-catch-errors": "^1.0.0",
     "react-transform-hmr": "^1.0.1",
