--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "atob": "^2.0.3",
     "babel-cli": "^6.18.0",
     "babel-core": "^6.18.2",
-    "babel-eslint": "^6.1.2",
+    "babel-eslint": "^7.2.3",
     "babel-loader": "^6.2.7",
     "babel-plugin-react-transform": "^2.0.2",
     "babel-plugin-transform-class-properties": "^6.18.0",
@@ -58,13 +58,15 @@
     "babel-preset-react": "^6.16.0",
     "babel-register": "^6.18.0",
     "chai": "^3.3.0",
-    "codemirror": "^5.20.2",
+    "codemirror": "^5.30.0",
     "cross-env": "^2.0.1",
     "css-loader": "^0.23.1",
-    "eslint": "^3.15.0",
+    "eslint": "^4.9.0",
     "eslint-config-react-app": "^2.0.1",
+    "eslint-plugin-flowtype": "^2.39.1",
     "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-react": "^4.2.3",
+    "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-react": "^7.4.0",
     "estraverse": "^4.2.0",
     "estraverse-fb": "^1.3.1",
     "express": "^4.14.0",
@@ -79,7 +81,7 @@
     "prettier": "^1.7.2",
     "react": "^15.5.0",
     "react-addons-test-utils": "^15.3.2",
-    "react-codemirror": "^0.2.3",
+    "react-codemirror2": "^2.0.2",
     "react-dom": "^15.3.2",
     "react-transform-catch-errors": "^1.0.0",
     "react-transform-hmr": "^1.0.1",
