--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "react": ">=15"
   },
   "dependencies": {
-    "ajv": "^5.2.3",
+    "ajv": "5.2.3",
     "lodash.topath": "^4.5.2",
     "prop-types": "^15.5.8",
     "setimmediate": "^1.0.5"
