package.json fixes

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@department-of-veteran-affairs/react-jsonschema-form",
+  "name": "@department-of-veterans-affairs/react-jsonschema-form",
   "version": "1.0.0",
   "description": "A simple React component capable of building HTML forms out of a JSON schema.",
   "scripts": {
@@ -80,14 +80,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/mozilla-services/react-jsonschema-form.git"
+    "url": "git+https://github.com/department-of-veterans-affairs/react-jsonschema-form.git"
   },
-  "author": "Nicolas Perriault <nperriault@mozilla.com>",
+  "author": "DSVA",
   "keywords": [
     "react",
     "form",
     "json-schema"
   ],
   "license": "Apache-2.0",
-  "homepage": "https://github.com/mozilla-services/react-jsonschema-form#readme"
+  "homepage": "https://github.com/department-of-veterans-affairs/react-jsonschema-form#readme"
 }
