--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "eslint": "^4.19.1",
     "eslint-plugin-jest": "^21.17.0",
     "eslint-plugin-react": "^7.9.1",
-    "husky": "^0.14.3",
+    "husky": "^1.0.0-rc.9",
     "jest": "^23.1.0",
     "lerna": "^2.11.0",
     "lint-staged": "^7.2.0",
