Add dependency: atob

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "yarn": ">=1"
   },
   "devDependencies": {
+    "atob": "^2.0.3",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.3",
