--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   ],
   "license": "MIT",
   "scripts": {
+    "check:deps": "ncu && lerna exec --stream -- ncu",
     "format": "lerna exec --stream --parallel -- prettier-eslint --write \"**/*.js\"",
     "clean:pkg": "lerna exec --stream --parallel --ignore playground -- rimraf dist lib",
     "babel:pkg": "lerna exec --stream --parallel --ignore playground -- babel src --out-dir lib",
@@ -64,6 +65,7 @@
     "lerna": "^2.11.0",
     "lint-staged": "^7.2.0",
     "mocha": "^2.5.3",
+    "npm-check-updates": "^2.14.2",
     "npm-run-all": "^4.1.3",
     "prettier-eslint-cli": "^4.7.1",
     "react": "^15.5.0",
