--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "yarn": ">=1"
   },
   "devDependencies": {
+    "@types/jest": "^23.1.1",
+    "@types/react": "^16.4.1",
     "atob": "^2.0.3",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
@@ -54,6 +56,7 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "dom-testing-library": "^2.6.1",
     "eslint": "^4.19.1",
     "eslint-plugin-jest": "^21.17.0",
     "eslint-plugin-react": "^7.9.1",
@@ -61,6 +64,7 @@
     "jest": "^23.1.0",
     "lerna": "^2.11.0",
     "lint-staged": "^7.2.0",
+    "lolex": "^2.7.0",
     "npm-check-updates": "^2.14.2",
     "npm-run-all": "^4.1.3",
     "prettier-eslint-cli": "^4.7.1",
