--- a/package.json
+++ b/package.json
@@ -56,12 +56,12 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
-    "dom-testing-library": "^2.6.1",
     "eslint": "^4.19.1",
     "eslint-plugin-jest": "^21.17.0",
     "eslint-plugin-react": "^7.9.1",
     "husky": "^1.0.0-rc.9",
     "jest": "^23.1.0",
+    "jest-dom": "^1.3.1",
     "lerna": "^2.11.0",
     "lint-staged": "^7.2.0",
     "npm-check-updates": "^2.14.2",
