Update classes from Bootstrap 3 to Bootstrap 4 and update tests

--- a/playground/package.json
+++ b/playground/package.json
@@ -5,7 +5,8 @@
   "private": true,
   "scripts": {
     "start": "parcel src/index.html --no-cache",
-    "build": "parcel build src/index.html"
+    "build": "parcel build src/index.html",
+    "icons": "svgr --out-dir src/components/icons svg --icon"
   },
   "dependencies": {
     "codemirror": "^5.30.0",
@@ -16,6 +17,10 @@
     "react-jsonschema-form-bootstrap": "^2.0.0"
   },
   "devDependencies": {
+    "@svgr/cli": "^2.0.0",
     "parcel-bundler": "^1.9.2"
+  },
+  "prettier": {
+    "singleQuote": true
   }
 }
