--- a/packages/react-jsonschema-form-bootstrap/package.json
+++ b/packages/react-jsonschema-form-bootstrap/package.json
@@ -5,10 +5,17 @@
   "main": "dist/main.js",
   "source": "src/index.js",
   "license": "MIT",
+  "scripts": {
+    "icons": "svgr --out-dir src/components/icons svg --icon"
+  },
   "peerDependencies": {
     "react": ">=16"
   },
   "devDependencies": {
+    "@svgr/cli": "^2.0.0",
     "react": "^16.4.1"
+  },
+  "prettier": {
+    "singleQuote": true
   }
 }
