--- a/.babelrc
+++ b/.babelrc
@@ -2,7 +2,8 @@
   "presets": ["react", "env"],
   "plugins": [
     "transform-object-rest-spread",
-    "transform-class-properties"
+    "transform-class-properties",
+    "transform-runtime"
   ],
   "env": {
     "development": {
