--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   "dependencies": {
     "ajv": "^5.2.3",
     "babel-runtime": "^6.26.0",
+    "core-js": "^2.5.7",
     "lodash.topath": "^4.5.2",
     "prop-types": "^15.5.8",
     "setimmediate": "^1.0.5"
