--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "express": "^4.14.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "gh-pages": "^0.11.0",
-    "html": "0.0.10",
+    "html": "^1.0.0",
     "husky": "^0.13.2",
     "jsdom": "^8.3.0",
     "json-loader": "^0.5.7",
