--- a/package.json
+++ b/package.json
@@ -45,8 +45,7 @@
     "babel-runtime": "^6.26.0",
     "core-js": "^2.5.7",
     "lodash.topath": "^4.5.2",
-    "prop-types": "^15.5.8",
-    "setimmediate": "^1.0.5"
+    "prop-types": "^15.5.8"
   },
   "devDependencies": {
     "atob": "^2.0.3",
