--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,5 @@
 {
-  "presets": ["react", "es2015"],
+  "presets": ["react", "env"],
   "plugins": [
     "transform-object-rest-spread",
     "transform-class-properties"
