--- a/package.json
+++ b/package.json
@@ -50,9 +50,9 @@
   "devDependencies": {
     "atob": "^2.0.3",
     "babel-cli": "^6.18.0",
-    "babel-core": "^6.18.2",
+    "babel-core": "^6.26.3",
     "babel-eslint": "^7.2.3",
-    "babel-loader": "^6.2.7",
+    "babel-loader": "^7.1.5",
     "babel-plugin-react-transform": "^2.0.2",
     "babel-plugin-transform-class-properties": "^6.18.0",
     "babel-plugin-transform-object-rest-spread": "^6.16.0",
@@ -73,7 +73,7 @@
     "estraverse": "^4.2.0",
     "estraverse-fb": "^1.3.1",
     "express": "^4.14.0",
-    "extract-text-webpack-plugin": "^2.0.0",
+    "extract-text-webpack-plugin": "^3.0.2",
     "gh-pages": "^0.11.0",
     "html": "^1.0.0",
     "husky": "^0.13.2",
@@ -93,8 +93,9 @@
     "sinon": "^1.17.6",
     "style-loader": "^0.13.1",
     "toctoc": "^0.2.3",
-    "webpack": "^3.10.0",
-    "webpack-dev-middleware": "^1.8.4",
+    "webpack": "^4.20.2",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-middleware": "^3.4.0",
     "webpack-hot-middleware": "^2.13.2"
   },
   "directories": {
