--- a/package.json
+++ b/package.json
@@ -73,13 +73,13 @@
     "estraverse": "^4.2.0",
     "estraverse-fb": "^1.3.1",
     "express": "^4.14.0",
-    "extract-text-webpack-plugin": "^3.0.2",
     "gh-pages": "^0.11.0",
     "html": "^1.0.0",
     "husky": "^0.13.2",
     "jsdom": "^8.3.0",
     "json-loader": "^0.5.7",
     "lint-staged": "^3.3.1",
+    "mini-css-extract-plugin": "^0.4.3",
     "mocha": "^5.2.0",
     "prettier": "^1.12.0",
     "react": "^15.5.0",
