--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react": ">=15"
   },
   "dependencies": {
+    "@material-ui/core": "^3.5.1",
     "ajv": "^5.2.3",
     "babel-runtime": "^6.26.0",
     "core-js": "^2.5.7",
@@ -83,10 +84,10 @@
     "mini-css-extract-plugin": "^0.4.3",
     "mocha": "^5.2.0",
     "prettier": "^1.15.1",
-    "react": "^15.5.0",
+    "react": "^16.6.3",
     "react-addons-test-utils": "^15.3.2",
     "react-codemirror2": "^4.1.0",
-    "react-dom": "^15.3.2",
+    "react-dom": "^16.6.3",
     "react-transform-catch-errors": "^1.0.0",
     "react-transform-hmr": "^1.0.1",
     "redbox-react": "^1.3.3",
