fix: #5: Add support for material ui date and datetime pickers

--- a/package.json
+++ b/package.json
@@ -43,12 +43,17 @@
     "react-dom": ">=16.6.3"
   },
   "dependencies": {
+    "@date-io/date-fns": "0.0.2",
+    "@date-io/moment": "0.0.2",
     "@material-ui/core": "^3.5.1",
     "@material-ui/icons": "^3.0.1",
     "ajv": "^5.2.3",
     "babel-runtime": "^6.26.0",
     "core-js": "^2.5.7",
+    "date-fns": "^2.0.0-alpha.25",
     "lodash.topath": "^4.5.2",
+    "material-ui-pickers": "^2.0.4",
+    "moment": "^2.23.0",
     "prop-types": "^15.5.8",
     "react": "^16.6.3",
     "react-dom": "^16.6.3"
@@ -81,13 +86,14 @@
     "express": "^4.14.0",
     "gh-pages": "^0.11.0",
     "html": "^1.0.0",
-    "husky": "^0.13.2",
+    "husky": "^0.13.4",
     "jsdom": "^8.3.0",
     "json-loader": "^0.5.7",
     "lint-staged": "^3.3.1",
     "mini-css-extract-plugin": "^0.4.3",
     "mocha": "^5.2.0",
-    "prettier": "^1.15.1",
+    "prettier": "1.15.3",
+    "pretty-quick": "^1.8.0",
     "react": "^16.6.3",
     "react-addons-test-utils": "^15.3.2",
     "react-codemirror2": "^4.1.0",
