--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "start": "node devServer.js",
     "tdd": "cross-env NODE_ENV=test mocha --require babel-register --watch --require ./test/setup-jsdom.js test/**/*_test.js",
     "test": "cross-env NODE_ENV=test mocha --require babel-register --require ./test/setup-jsdom.js test/**/*_test.js",
-    "temp": "cross-env NODE_ENV=test mocha --require babel-register --watch --require ./test/setup-jsdom.js test/SchemaField_test.js"
+    "temp": "cross-env NODE_ENV=test mocha --require babel-register --watch --require ./test/setup-jsdom.js test/ObjectField_test.js"
   },
   "prettierOptions": "--jsx-bracket-same-line --trailing-comma es5 --semi --tab-width 2",
   "lint-staged": {
