doc: add permalinks and fix internal hyperlinks in documentation

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,3 +10,7 @@ nav:
   - Form Customization: form-customization.md
   - Validation: validation.md
   - Playground: https://mozilla-services.github.io/react-jsonschema-form/
+
+markdown_extensions:
+  - toc:
+      permalink: true
