--- a/package.json
+++ b/package.json
@@ -3,28 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/runtime": "^7.3.0",
     "@emotion/core": "^10.0.6",
     "@emotion/styled": "^10.0.6",
     "ajv": "^6.6.2",
-    "ajv-errors": "^1.0.1",
-    "codemirror": "^5.42.2",
     "core-js": "^2.6.2",
     "emotion-theming": "^10.0.6",
     "lodash.topath": "^4.5.2",
-    "prop-types": "^15.6.2",
     "react": "^16.7.0",
-    "react-codemirror2": "^5.1.0",
-    "react-dom": "^16.7.0",
-    "react-scripts": "2.1.3"
+    "react-dom": "^16.7.0"
   },
   "scripts": {
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
-    "test": "react-app-rewired test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
+    "start": "./node_modules/.bin/webpack-dev-server --inline --host 127.0.0.1 --content-base playground/",
+    "build": "rimraf dist && cross-env NODE_ENV=production webpack --config webpack.config.dist.js",
+    "lint": "eslint src/ test/"
   },
   "browserslist": [
     ">0.2%",
@@ -33,7 +25,35 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "react-app-rewire-babel-loader": "^0.1.1",
-    "react-app-rewired": "^2.0.1"
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.2.2",
+    "@babel/plugin-proposal-class-properties": "^7.3.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.3.0",
+    "@babel/plugin-transform-runtime": "^7.2.0",
+    "@babel/preset-env": "^7.3.0",
+    "@babel/preset-react": "^7.0.0",
+    "babel-eslint": "^10.0.1",
+    "babel-loader": "^8.0.5",
+    "chai": "^4.2.0",
+    "codemirror": "^5.42.2",
+    "cross-env": "^5.2.0",
+    "css-loader": "^2.1.0",
+    "eslint": "^5.12.1",
+    "eslint-config-prettier": "^3.6.0",
+    "eslint-import-resolver-webpack": "^0.10.1",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-prettier": "^3.0.1",
+    "eslint-plugin-react": "^7.12.4",
+    "mocha": "^5.2.0",
+    "prettier": "^1.16.0",
+    "prop-types": "^15.6.2",
+    "react-codemirror2": "^5.1.0",
+    "react-scripts": "2.1.3",
+    "rimraf": "^2.6.3",
+    "style-loader": "^0.23.1",
+    "webpack": "^4.29.0",
+    "webpack-cli": "^3.2.1",
+    "webpack-dev-server": "^3.1.14"
   }
 }
