--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "scripts": {
     "start": "./node_modules/.bin/webpack-dev-server --inline --host 127.0.0.1 --content-base playground/",
     "build": "rimraf dist && cross-env NODE_ENV=production webpack --config webpack.config.dist.js",
-    "lint": "eslint src/ test/"
+    "lint": "eslint src/ test/",
+    "test": "cross-env NODE_ENV=test mocha --require @babel/register --require ./test/setup-jsdom.js test/**/*_test.js"
   },
   "browserslist": [
     ">0.2%",
@@ -34,6 +35,7 @@
     "@babel/plugin-transform-runtime": "^7.2.0",
     "@babel/preset-env": "^7.3.0",
     "@babel/preset-react": "^7.0.0",
+    "@babel/register": "^7.0.0",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.5",
     "chai": "^4.2.0",
@@ -47,14 +49,16 @@
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.12.4",
+    "jsdom": "^13.2.0",
     "mocha": "^5.2.0",
     "prettier": "^1.16.0",
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
-    "react-dom": "^16.7.0",
     "react-codemirror2": "^5.1.0",
+    "react-dom": "^16.7.0",
     "react-scripts": "2.1.3",
     "rimraf": "^2.6.3",
+    "sinon": "^7.2.3",
     "style-loader": "^0.23.1",
     "webpack": "^4.29.0",
     "webpack-cli": "^3.2.1",
