--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
     "node": ">=6"
   },
   "peerDependencies": {
-    "react": ">=16.6.3",
-    "react-dom": ">=16.6.3"
+    "react": ">=16.8.6",
+    "react-dom": ">=16.8.6"
   },
   "dependencies": {
     "@date-io/date-fns": "0.0.2",
@@ -55,12 +55,11 @@
     "material-ui-pickers": "^2.2.4",
     "moment": "^2.24.0",
     "prop-types": "^15.5.8",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
-    "react-html-parser": "^2.0.2"
+    "react-html-parser": "^2.0.2",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6"
   },
   "devDependencies": {
-    "nyc": "^13.2.0",
     "atob": "^2.0.3",
     "babel-cli": "^6.18.0",
     "babel-core": "^6.26.3",
@@ -94,12 +93,13 @@
     "lint-staged": "^3.3.1",
     "mini-css-extract-plugin": "^0.4.3",
     "mocha": "^5.2.0",
+    "nyc": "^13.2.0",
     "prettier": "1.15.3",
     "pretty-quick": "^1.8.0",
-    "react": "^16.6.3",
+    "react": "^16.8.6",
     "react-addons-test-utils": "^15.3.2",
     "react-codemirror2": "^4.1.0",
-    "react-dom": "^16.6.3",
+    "react-dom": "^16.8.6",
     "react-transform-catch-errors": "^1.0.0",
     "react-transform-hmr": "^1.0.1",
     "redbox-react": "^1.3.3",
