feat: use monaco for playground

--- a/package.json
+++ b/package.json
@@ -85,13 +85,16 @@
     "jsdom": "^8.3.0",
     "json-loader": "^0.5.7",
     "lint-staged": "^3.3.1",
+    "loader-utils": "^1.2.3",
     "mini-css-extract-plugin": "^0.4.3",
     "mocha": "^5.2.0",
+    "monaco-editor-webpack-plugin": "^1.7.0",
     "nyc": "^13.2.0",
     "prettier": "^1.15.1",
     "react": "^15.5.0",
     "react-codemirror2": "^4.1.0",
     "react-dom": "^15.3.2",
+    "react-monaco-editor": "^0.26.2",
     "react-portal": "^4.2.0",
     "react-transform-catch-errors": "^1.0.0",
     "react-transform-hmr": "^1.0.1",
