--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@babel/plugin-transform-runtime": "^7.4.4",
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
+    "@babel/preset-typescript": "^7.3.3",
     "@babel/register": "^7.4.4",
     "atob": "^2.0.3",
     "babel-eslint": "^10.0.1",
